vkGetSemaphoreCounterValue doesn't update without vkWaitSemaphores calls on Intel UHD 620
To reproduce:
- Construct a new timeline semaphore
- Submit work that will signal it
- Poll
vkGetSemaphoreCounterValue
The fetched value never updates from 0. Adding a call to vkWaitSemaphores
on the semaphore with a 0 timeout prior to polling causes it to update in short order as expected.